--- a/web/index/styles.css
+++ b/web/index/styles.css
@@ -8,8 +8,21 @@ body {
 
 #table {
 	height:100%;
+	padding: 0;
 	background: maroon;
 	float: left;
+}
+
+.player-view {
+    border: black 1px solid;
+	width: 100%;
+	height: 70vh;
+}
+
+.player-hand {
+    border: black 1px solid;
+	width: 100%;
+	height:30vh;
 }
 
 #console {
@@ -20,7 +33,7 @@ body {
 
 .chatroom-display {
     width: 100%;
-    height: 70vh;
+    height: 80vh;
     margin-top: 2.5vh;
     padding: 5%;
     border: black 1px solid;
@@ -47,7 +60,7 @@ body {
 
 .chatroom-user-input {
     width: 100%;
-    height: 22.5vh;
+    height: 12.5vh;
     max-height: 22.5vh;
     margin: 2.5vh 0;
     font-size: 0.75em;
