--- a/web/index/styles.css
+++ b/web/index/styles.css
@@ -14,15 +14,51 @@ body {
 }
 
 .player-view {
-    border: black 1px solid;
+	border: black 1px solid;
 	width: 100%;
 	height: 70vh;
 }
 
 .player-hand {
-    border: black 1px solid;
+	border: black 1px solid;
 	width: 100%;
-	height:30vh;
+	height: 30vh;
+}
+
+.last-played {
+	width: 100%;
+	height: 100%;
+	float: left;
+}
+
+.card-display {
+	width: 100%;
+	height: 90%;
+	padding-left: 2%;
+	padding-top: 2%;
+	display: inline-flex;
+	overflow-x: scroll;
+	float: left;
+  	border: 1px;
+  	position : relative;
+}
+
+.card-display img {
+	height: 100%;
+}
+
+.card-display img.rest {
+	margin-left: -80px;
+}
+
+.card-display img:hover {
+	margin-top: -15px;
+}
+
+.user-buttons {
+	width: 100%;
+	height: 100%;
+	float: left;
 }
 
 #console {
@@ -32,26 +68,26 @@ body {
 }
 
 .chatroom-display {
-    width: 100%;
-    height: 80vh;
-    margin-top: 2.5vh;
-    padding: 5%;
-    border: black 1px solid;
-    overflow-y: scroll;
+	width: 100%;
+	height: 80vh;
+	margin-top: 2.5vh;
+	padding: 5%;
+	border: black 1px solid;
+	overflow-y: scroll;
 }
 
 .chatroom-block {
-    font-size: 0.75em;
-    margin-bottom: 0.5em;
+	font-size: 0.75em;
+	margin-bottom: 0.5em;
 }
 
 .chatroom-user, .chatroom-command {
 	color: black;
-    font-weight: 800;
+	font-weight: 800;
 }
 
 .chatroom-user {
-    color: blue;
+	color: blue;
 }
 
 .chatroom-user.current-user {
@@ -59,11 +95,35 @@ body {
 }
 
 .chatroom-user-input {
-    width: 100%;
-    height: 12.5vh;
-    max-height: 22.5vh;
-    margin: 2.5vh 0;
-    font-size: 0.75em;
-    padding: 5%;
-    border: black 1px solid;
+	width: 100%;
+	height: 12.5vh;
+	max-height: 22.5vh;
+	margin: 2.5vh 0;
+	font-size: 0.75em;
+	padding: 5%;
+	border: black 1px solid;
+}
+
+/* width */
+::-webkit-scrollbar {
+	width: 10px;
+}
+
+.card-display::-webkit-scrollbar {
+	display:none;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+	background: #f1f1f1;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+	background: #888;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+	background: #555;
 }
