--- a/web/index/styles.css
+++ b/web/index/styles.css
@@ -19,10 +19,18 @@ body {
 	height: 70vh;
 }
 
-.player-hand {
+.player-bottom {
 	border: black 1px solid;
 	width: 100%;
 	height: 30vh;
+}
+
+.player-hand {
+	display: block;
+	position: relative;
+	margin: 0 auto;
+	height: 100%;
+	max-width: fit-content;
 }
 
 .last-played {
@@ -32,19 +40,20 @@ body {
 }
 
 .card-display {
-	width: 100%;
-	height: 90%;
-	padding-left: 2%;
-	padding-top: 2%;
+    height: 95%;
+    padding: 25px 12.5px 0;
 	display: inline-flex;
 	overflow-x: scroll;
 	float: left;
-  	border: 1px;
-  	position : relative;
+	border: 1px;
+	position : relative;
 }
 
 .card-display img {
 	height: 100%;
+	box-shadow: 0;
+	border: none;
+	border-radius:10px;
 }
 
 .card-display img.rest {
@@ -53,6 +62,11 @@ body {
 
 .card-display img:hover {
 	margin-top: -15px;
+}
+
+.card-display img.selected {
+	margin-top: -15px;
+	box-shadow: -0px 0px 5px 5px #ffff1c;
 }
 
 .user-buttons {
@@ -97,7 +111,7 @@ body {
 .chatroom-user-input {
 	width: 100%;
 	height: 12.5vh;
-	max-height: 22.5vh;
+	max-height: 12.5vh;
 	margin: 2.5vh 0;
 	font-size: 0.75em;
 	padding: 5%;
