--- a/web/index/styles.css
+++ b/web/index/styles.css
@@ -14,13 +14,64 @@ body {
 }
 
 .player-view {
-	border: black 1px solid;
 	width: 100%;
 	height: 70vh;
 }
 
+.view-left, .view-right {
+	display: block;
+	position: relative;
+	margin: 0 auto;
+	height: 100%;
+	width: 100%;
+	float: left;
+}
+
+.left-player, .right-player {
+	width: 60%;
+	position: relative;
+	max-height: fit-content;
+	display: block;
+	margin: 0 auto;
+	padding-top: 20px;
+}
+
+.left-player img, .right-player img {
+	width:100%;
+}
+
+.left-player img.rest, .right-player img.rest {
+	margin-top: -120px;
+}
+
+.view-top {
+	display: block;
+	position: relative;
+	margin: 0 auto;
+	height: 19vh;
+	width: 100%;
+	float: left;
+	padding-top: 10px;
+}
+
+.top-player {
+	height: 100%;
+	position: relative;
+	max-width: fit-content;
+	display: block;
+	margin: 0 auto;
+}
+
+.top-player img {
+	height:100%;
+}
+
+.top-player img.rest {
+	margin-right: -110px;
+}
+
+
 .player-bottom {
-	border: black 1px solid;
 	width: 100%;
 	height: 30vh;
 }
@@ -31,12 +82,6 @@ body {
 	margin: 0 auto;
 	height: 100%;
 	max-width: fit-content;
-}
-
-.last-played {
-	width: 100%;
-	height: 100%;
-	float: left;
 }
 
 .card-display {
