--- a/web/index/styles.css
+++ b/web/index/styles.css
@@ -80,7 +80,6 @@ body {
 	display: block;
 	position: relative;
 	margin: 0 auto;
-	height: 100%;
 	max-width: fit-content;
 }
 
@@ -95,7 +94,7 @@ body {
 }
 
 .card-display img {
-	height: 100%;
+	width: 100%;
 	box-shadow: 0;
 	border: none;
 	border-radius:10px;
@@ -106,11 +105,11 @@ body {
 }
 
 .card-display img:hover {
-	margin-top: -15px;
+	transform: translateY(-15px);
 }
 
 .card-display img.selected {
-	margin-top: -15px;
+	transform: translateY(-15px);
 	box-shadow: -0px 0px 5px 5px #ffff1c;
 }
 
