--- a/web/index/styles.css
+++ b/web/index/styles.css
@@ -15,7 +15,7 @@ body {
 
 .player-view {
 	width: 100%;
-	height: 70vh;
+	height: 60vh;
 }
 
 .view-left, .view-right {
@@ -26,7 +26,7 @@ body {
 }
 
 .player-left, .player-right {
-	width:95%;
+	width:90%;
 	display: block;
 	position: relative;
 	margin: 0 auto;
@@ -110,22 +110,47 @@ body {
 	position: relative;
 }
 
-
-
-
-.player-bottom {
+.view-bottom {
 	width: 100%;
-	height: 30vh;
+	height: 40vh;
+	float: left;
 }
 
-.player-hand {
+.player-submission {
+	width: 80%;
+	height: 12.5vh;
+	display: inline-block;
+	float: left;
+}
+
+.player-buttons {
+	width: 20%;
+	display: inline-block;
+	height: 12.5vh;
+}
+
+.player-buttons button {
+  background-color: #fff;
+  border: none;
+  color: black;
+  padding: 0.45em 0.75em;
+  text-align: center;
+  text-decoration: none;
+  display: block;
+  font-size: 0.75em;
+  float: right;
+  margin: 0.2em 1.25em 0.5em;
+}
+
+.player-bottom {
+	height: 27.5vh;
 	display: block;
 	position: relative;
 	margin: 0 auto;
 	max-width: fit-content;
 }
 
-.card-display {
+.player-bottom-hand {
     height: 95%;
     padding: 25px 12.5px 0;
 	display: inline-flex;
@@ -135,22 +160,22 @@ body {
 	position : relative;
 }
 
-.card-display img {
+.player-bottom-hand img {
 	width: 100%;
 	box-shadow: 0;
 	border: none;
 	border-radius:10px;
 }
 
-.card-display img.rest {
+.player-bottom-hand img.rest {
 	margin-left: -80px;
 }
 
-.card-display img:hover {
+.player-bottom-hand img:hover {
 	transform: translateY(-15px);
 }
 
-.card-display img.selected {
+.player-bottom-hand img.selected {
 	transform: translateY(-15px);
 	box-shadow: -0px 0px 5px 5px #ffff1c;
 }
@@ -214,7 +239,7 @@ body {
 	width: 10px;
 }
 
-.card-display::-webkit-scrollbar, 
+.player-bottom-hand::-webkit-scrollbar, 
 .player-top-hand::-webkit-scrollbar, 
 .player-left-hand::-webkit-scrollbar, 
 .player-right-hand::-webkit-scrollbar {
