--- a/web/index/styles.css
+++ b/web/index/styles.css
@@ -184,6 +184,7 @@ body {
 	width: 100%;
 	height: 100%;
 	float: left;
+	z-index: 999;
 }
 
 #console {
@@ -259,4 +260,10 @@ body {
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
 	background: #555;
+}
+
+
+
+#2H {
+	background-image: url("../assets/cards/hearts/2.png");
 }
