--- a/web/index/styles.css
+++ b/web/index/styles.css
@@ -127,6 +127,7 @@ body {
 	width: 20%;
 	display: inline-block;
 	height: 12.5vh;
+	z-index: 999;
 }
 
 .player-buttons button {
@@ -147,11 +148,11 @@ body {
 	display: block;
 	position: relative;
 	margin: 0 auto;
-	max-width: fit-content;
 }
 
 .player-bottom-hand {
     height: 95%;
+    width:100%;
     padding: 25px 12.5px 0;
 	display: inline-flex;
 	overflow-x: scroll;
@@ -184,7 +185,6 @@ body {
 	width: 100%;
 	height: 100%;
 	float: left;
-	z-index: 999;
 }
 
 #console {
@@ -264,6 +264,32 @@ body {
 
 
 
-#2H {
+#H2 {
 	background-image: url("../assets/cards/hearts/2.png");
+}
+
+
+
+.playing-card-image {
+	width: 100%;
+	height:100%;
+	box-shadow: 0;
+	border: none;
+	border-radius:10px;    
+	background-size: cover;
+    background-repeat: no-repeat;
+    position: relative;
+}
+
+.playing-card-image.rest {
+	margin-left: -40px;
+}
+
+.playing-card-image:hover {
+	transform: translateY(-15px);
+}
+
+.playing-card-image.selected {
+	transform: translateY(-15px);
+	box-shadow: -0px 0px 5px 5px #ffff1c;
 }
