--- a/web/index/styles.css
+++ b/web/index/styles.css
@@ -35,6 +35,7 @@ body {
 
 .player-left-hand, .player-right-hand {
     height: 95%;
+    max-height:50vh;
     padding: 15px 0;
     display: inline-flex;
     flex-direction: column;
@@ -272,7 +273,7 @@ body {
 
 .playing-card-image {
 	width: 100%;
-	height:100%;
+	height: 100%;
 	box-shadow: 0;
 	border: none;
 	border-radius:10px;    
@@ -282,7 +283,7 @@ body {
 }
 
 .playing-card-image.rest {
-	margin-left: -40px;
+	margin-left: -70px;
 }
 
 .playing-card-image:hover {
