--- a/web/index/styles.css
+++ b/web/index/styles.css
@@ -32,7 +32,7 @@ body {
 
 .view-left-fixed, 
 .view-right-fixed {
-	transform: translateX(-37%) translateY(100%) rotate(90deg);
+	transform: translateX(-38%) translateY(100%) rotate(90deg);
 	position: absolute;
 	height: 25vh;
 	width: 80vh;
@@ -73,7 +73,16 @@ img.rest {
 	min-width: 0;
 	min-height: 0;
 	position: relative;
+}
+
+#left .playing-card,
+#right .playing-card {
 	max-width: 20%;
+}
+
+#top .playing-card,
+#bottom .playing-card {
+	max-width: 15%;
 }
 
 #bottom img:hover {
@@ -98,14 +107,27 @@ img.rest {
 }
 
 .played div {
-	background-color: white;
-	opacity: 50%;
 	width: 100%;
+	height: 100%;
+	display: flex;
+	align-content: center;
+	justify-content: center;
+}
+
+.played .display {
+    height: fit-content;
+    width: fit-content;
+    margin: 0 auto;
+}
+
+.played .left img {
+	float: right;
 }
 
 .played .left, .played .right {
 	height: 90%;
 	margin-top: 10%;
+	padding: 50%;
 }
 
 .played .top {
@@ -122,32 +144,7 @@ img.rest {
 	position: relative;
 	width: 5vw;
 	height: auto;
-}
-
-.player-buttons {
-	width: 20%;
-	display: inline-block;
-	height: 12.5vh;
-	z-index: 999;
-}
-
-.player-buttons button {
-	background-color: #fff;
-	border: none;
-	color: black;
-	padding: 0.45em 0.75em;
-	text-align: center;
-	text-decoration: none;
 	display: block;
-	font-size: 0.75em;
-	float: right;
-	margin: 0.2em 1.25em 0.5em;
-}
-
-.player-submission {
-	width: 80%;
-	height: 12.5vh;
-	display: inline-block;
 	float: left;
 }
 
